tests/ui/proc-macro/pretty-print-hack-show.local.stderr
error: using `allsorts-rental`
  --> $DIR/pretty-print-hack/allsorts-rental-0.5.6/src/lib.rs:4:6
   |
LL | enum ProceduralMasqueradeDummyType {
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the `allsorts-rental` crate will stop compiling in future versions of Rust; please switch to `rental` v0.5.6, or switch to one of the `rental` alternatives like `ouroboros`
   = note: `#[deny(proc_macro_back_compat)]` on by default

error: using `allsorts-rental`
  --> $DIR/pretty-print-hack/allsorts-rental-0.5.6/src/lib.rs:4:6
   |
LL | enum ProceduralMasqueradeDummyType {
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the `allsorts-rental` crate will stop compiling in future versions of Rust; please switch to `rental` v0.5.6, or switch to one of the `rental` alternatives like `ouroboros`

error: using `allsorts-rental`
  --> $DIR/pretty-print-hack/allsorts-rental-0.5.6/src/lib.rs:4:6
   |
LL | enum ProceduralMasqueradeDummyType {
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the `allsorts-rental` crate will stop compiling in future versions of Rust; please switch to `rental` v0.5.6, or switch to one of the `rental` alternatives like `ouroboros`

error: using `allsorts-rental`
  --> $DIR/pretty-print-hack/allsorts-rental-0.5.6/src/lib.rs:4:6
   |
LL | enum ProceduralMasqueradeDummyType {
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the `allsorts-rental` crate will stop compiling in future versions of Rust; please switch to `rental` v0.5.6, or switch to one of the `rental` alternatives like `ouroboros`

error: aborting due to 4 previous errors

Future incompatibility report: Future breakage diagnostic:
error: using `allsorts-rental`
  --> $DIR/pretty-print-hack/allsorts-rental-0.5.6/src/lib.rs:4:6
   |
LL | enum ProceduralMasqueradeDummyType {
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the `allsorts-rental` crate will stop compiling in future versions of Rust; please switch to `rental` v0.5.6, or switch to one of the `rental` alternatives like `ouroboros`
   = note: `#[deny(proc_macro_back_compat)]` on by default

Future breakage diagnostic:
error: using `allsorts-rental`
  --> $DIR/pretty-print-hack/allsorts-rental-0.5.6/src/lib.rs:4:6
   |
LL | enum ProceduralMasqueradeDummyType {
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the `allsorts-rental` crate will stop compiling in future versions of Rust; please switch to `rental` v0.5.6, or switch to one of the `rental` alternatives like `ouroboros`
   = note: `#[deny(proc_macro_back_compat)]` on by default

Future breakage diagnostic:
error: using `allsorts-rental`
  --> $DIR/pretty-print-hack/allsorts-rental-0.5.6/src/lib.rs:4:6
   |
LL | enum ProceduralMasqueradeDummyType {
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the `allsorts-rental` crate will stop compiling in future versions of Rust; please switch to `rental` v0.5.6, or switch to one of the `rental` alternatives like `ouroboros`
   = note: `#[deny(proc_macro_back_compat)]` on by default

Future breakage diagnostic:
error: using `allsorts-rental`
  --> $DIR/pretty-print-hack/allsorts-rental-0.5.6/src/lib.rs:4:6
   |
LL | enum ProceduralMasqueradeDummyType {
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #83125 <https://github.com/rust-lang/rust/issues/83125>
   = note: the `allsorts-rental` crate will stop compiling in future versions of Rust; please switch to `rental` v0.5.6, or switch to one of the `rental` alternatives like `ouroboros`
   = note: `#[deny(proc_macro_back_compat)]` on by default

